[package]
name = "audiotags-qobuz"
version = "0.5.1"
authors = ["Tianyi <ShiTianyi2001@outlook.com>", "Pierre de la Martinière <pierre.de.la.martiniere@gmail.com>", "Tarneo <tarneo@tarneo.fr>"]
edition = "2021"
description = "Unified IO for different types of audio metadata (qobuz fork)"
license = "MIT"
repository = "https://git.sr.ht/~tarneo/audiotags-qobuz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id3 = "1.10.0"
mp4ameta = "0.11.0"
metaflac = "0.2.5"
thiserror = "1.0.50"
audiotags-macro = { version = "0.2", path = "./audiotags-macro" }

[dev-dependencies]
tempfile = "3.8.1"

[build-dependencies]
readme-rustdocifier = "0.1.1"

[features]
default = ['from']
from = []
